Update Contribution tab content alignment, Update Advanced tab Support section, Fix Contribution tab tooltip translation

--- a/laterpay/asset_sources/scss/pages/_contributions.scss
+++ b/laterpay/asset_sources/scss/pages/_contributions.scss
@@ -466,6 +466,5 @@
     margin: 0;
     border-width: 0;
     min-height: 600px;
-    width: 50% !important;
-    padding: 0 25%;
+    padding-left: 15px;
 }
